# wasm-counting-contract

./: Cargo.toml  README.md
.cargo/: config
src/: contract.rs  lib.rs  msg.rs  state.rs
src/multitest/: contract.rs  tests.rs
