[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "2.0.3"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
cw-multi-test = "2.0.1"
