[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "2.0.3"
cw-storage-plus = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
cw-multi-test = "2.0.1"
